--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  fluentui_system_icons: ^1.1.170
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.3
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ncr.jpg
+    - assets/images/luzon.jpg
+    - assets/images/visayas.jpg
+    - assets/images/mindanao.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
