--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.3
   google_fonts: ^3.0.1
+  package_info_plus: ^1.4.2
 
 dev_dependencies:
   flutter_test:
