--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   fluentui_system_icons: ^1.1.170
   cupertino_icons: ^1.0.2
-  url_launcher: ^6.0.3
+  url_launcher: ^6.1.4
   google_fonts: ^3.0.1
   package_info_plus: ^1.4.2
+  share_plus: ^4.0.10
 
 dev_dependencies:
   flutter_test:
