--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   package_info_plus: ^1.4.2
   share_plus: ^4.0.10
+  flutter_search_bar: ^3.0.0-dev.1
 
 dev_dependencies:
   flutter_test:
