--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   package_info_plus: ^1.4.2
   share_plus: ^4.0.10
   flutter_search_bar: ^3.0.0-dev.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
     - assets/images/luzon.jpg
     - assets/images/visayas.jpg
     - assets/images/mindanao.jpg
+    - assets/t2.db
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
