--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
     - assets/images/luzon.jpg
     - assets/images/visayas.jpg
     - assets/images/mindanao.jpg
-    - assets/t2.db
+    - assets/zips_ph.db
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
