--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,11 +43,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "me.reddavid.zipcodeph"
-        minSdkVersion 16
+        applicationId "xyz.reddvid.zipcodeph"
+        minSdkVersion 19
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
