--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 2.0.1+2022070801
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,6 +44,7 @@ dependencies:
   flutter_search_bar: ^3.0.0-dev.1
   path_provider: ^2.0.11
   dialog_alert: ^0.0.3
+  google_mobile_ads: ^1.3.0
 
 dev_dependencies:
   flutter_test:
