--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.4
   google_fonts: ^3.0.1
-  package_info_plus: ^2.0.0
+  package_info_plus: ^1.4.3+1
   share_plus: ^4.0.10
   flutter_search_bar: ^3.0.0-dev.1
   path_provider: ^2.0.11
