--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.1.0+2023120401
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite:
   path:
 
-  fluentui_system_icons: ^1.1.170
-  url_launcher: ^6.1.4
-  google_fonts: ^6.1.0
-  package_info_plus: ^5.0.1
-  share_plus: ^7.2.1
-  flutter_search_bar: ^3.0.0-dev.1
-  path_provider: ^2.0.11
-  dialog_alert: ^0.0.3
+  cupertino_icons: ^1.0.8
   connectivity_plus: ^5.0.2
+  fluentui_system_icons: ^1.1.226
+  flutter_search_bar: ^3.0.0
+  google_fonts: ^6.1.0
+  lottie: ^3.0.0
+  package_info_plus: ^5.0.1
+  path_provider: ^2.1.2
+  responsive_framework: ^1.4.0
+  share_plus: ^7.2.2
   shimmer: ^3.0.0
-  lottie: ^2.7.0
-  cupertino_icons: ^1.0.2
+  sqflite: ^2.3.3
+  url_launcher: ^6.2.4
 
+  http: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
