--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   connectivity_plus: ^6.0.2
   fluentui_system_icons: ^1.1.226
+  flutter_launcher_icons: ^0.13.1
   flutter_search_bar: ^3.0.0
   google_fonts: ^6.1.0
   lottie: ^3.0.0
@@ -26,12 +27,14 @@ dependencies:
   shimmer: ^3.0.0
   sqflite: ^2.3.3
   url_launcher: ^6.2.4
+  anim_search_bar: ^2.0.3
 
   http: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^3.0.2
 
 flutter:
@@ -48,3 +51,21 @@ flutter:
     - assets/zips_ph.db
     - assets/json/trivias.json
     - assets/json/openbook.json
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icon/icon.png"
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
+  windows:
+    generate: true
+    image_path: "assets/icon/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/icon.png"
