--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,23 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystorePropertiesFile.withReader('UTF-8') { reader ->
+        keystoreProperties.load(reader)
+    }
+}
+
+def signingConfigDetails = {
+    storeFile file(keystoreProperties.getProperty('storeFile'))
+    keyAlias localProperties.getProperty('keyAlias')
+    keyPassword localProperties.getProperty('keyPassword')
+    storePassword localProperties.getProperty('storePassword')
+}
+
+
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -11,6 +28,7 @@ if (localPropertiesFile.exists()) {
         localProperties.load(reader)
     }
 }
+
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
@@ -23,7 +41,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.zipcodeph_flutter"
+    namespace "me.reddavid.zipcodephpro"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -42,7 +60,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.zipcodeph_flutter"
+        applicationId "me.reddavid.zipcodephpro"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
@@ -51,12 +69,21 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            signingConfigDetails
+        }
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfigDetails
         }
+//        debug {
+//            // TODO: Add your own signing config for the release build.
+//            // Signing with the debug keys for now, so `flutter run --release` works.
+//            signingConfig signingConfigs.debug
+//        }
     }
 }
 
