--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_search_bar: ^3.0.0
   google_fonts: ^6.1.0
+  logger: ^2.2.0
   lottie: ^3.0.0
   package_info_plus: ^8.0.0
   path_provider: ^2.1.2
