--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,16 @@ dependencies:
     sdk: flutter
   path:
 
+  anim_search_bar: ^2.0.3
   cupertino_icons: ^1.0.8
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.0.3
   fluentui_system_icons: ^1.1.226
   flutter_search_bar: ^3.0.0
   google_fonts: ^6.1.0
   lottie: ^3.0.0
-  package_info_plus: ^5.0.1
+  package_info_plus: ^8.0.0
   path_provider: ^2.1.2
-  share_plus: ^7.2.2
+  share_plus: ^9.0.0
   shimmer: ^3.0.0
   sqflite: ^2.3.3
   url_launcher: ^6.2.4
@@ -31,7 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
