--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,19 @@ dependencies:
   url_launcher: ^6.2.4
 
   http: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^3.0.2
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/icon/icon_nopad.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  adaptive_icon_background: null
+  adaptive_icon_foreground: "assets/icon/icon_nopad.png"
 
 flutter:
   uses-material-design: true
