--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,16 +68,17 @@ android {
 
     signingConfigs {
         release {
-            signingConfigDetails
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
         }
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            // signingConfig signingConfigs.debug
-            signingConfigDetails
+            signingConfig signingConfigs.release
+            debuggable = false
         }
     }
 }
