--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,36 +6,39 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.1.0+2023120401
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.8.0 <4.0.0'
+  flutter: '>=3.24.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  path:
+  path: ^1.9.1
 
   cupertino_icons: ^1.0.8
-  connectivity_plus: ^5.0.2
-  fluentui_system_icons: ^1.1.226
+  connectivity_plus: ^7.0.0
+  fluentui_system_icons: ^1.1.273
   flutter_search_bar: ^3.0.0
-  google_fonts: ^6.1.0
-  lottie: ^3.0.0
-  package_info_plus: ^5.0.1
-  path_provider: ^2.1.2
-  responsive_framework: ^1.4.0
-  share_plus: ^7.2.2
+  google_fonts: ^6.3.2
+  lottie: ^3.3.2
+  package_info_plus: ^9.0.0
+  path_provider: ^2.1.5
+  responsive_framework: ^1.5.1
+  share_plus: ^12.0.1
   shimmer: ^3.0.0
-  sqflite: ^2.3.3
-  url_launcher: ^6.2.4
+  sqflite: ^2.4.2
+  url_launcher: ^6.3.2
 
-  http: any
+  http: ^1.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
+
+  # Asset optimization for smaller app size
   assets:
     - assets/images/ncr.jpg
     - assets/images/luzon.jpg
@@ -48,3 +51,6 @@ flutter:
     - assets/zips_ph.db
     - assets/json/trivias.json
     - assets/json/openbook.json
+
+  # Enable deferred loading for better memory management
+  generate: true
