--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-  <application android:label="zipcodeph_flutter" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
+  
+  <!-- 16KB page size compatibility -->
+  <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="36" />
+  
+  <application 
+    android:label="zipcodeph_flutter" 
+    android:name="${applicationName}" 
+    android:icon="@mipmap/ic_launcher"
+    android:allowBackup="false"
+    android:supportsRtl="true"
+    android:largeHeap="false"
+    android:hardwareAccelerated="true">
     <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
