ignore secure files

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Android signing - keep these secure!
+android/key.properties
+android/upload.jks
+upload_certificate.pem
+build.jks
